AC_PREREQ(2.61)
AC_INIT(libsha1, 0.1, libsha1@googlegroups.com)
AM_INIT_AUTOMAKE

AC_CONFIG_SRCDIR([sha1.c])
AC_CONFIG_HEADER([config.h])

AC_PROG_CC
AC_PROG_LIBTOOL

AC_CHECK_HEADERS([stdint.h string.h])

AC_C_BIGENDIAN
AC_C_CONST

AC_TYPE_UINT8_T
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T
AC_TYPE_UINT64_T

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
